test/Fail/Issue6244.err
Issue6244.agda:4,1-44: error: [OptionError]
Option --safe cannot be combined with option --no-load-primitives
